--- a/TIDALDL-UI-PRO/Properties/Lang/StringResource.Russian.xaml
+++ b/TIDALDL-UI-PRO/Properties/Lang/StringResource.Russian.xaml
@@ -30,7 +30,7 @@
     <sys:String x:Key="strERROR">ОШИБКА</sys:String>
     <sys:String x:Key="strUPLOADLIST">ЗАГРУЗИТЬ ЛИСТ</sys:String>
     <sys:String x:Key="strTASKLIST">СПИСОК ЗАДАНИЙ</sys:String>
-    <sys:String x:Key="strDownload">Скачать</sys:String>
+    <sys:String x:Key="strDownload">Скачивание</sys:String>
     <sys:String x:Key="strComplete">Готово</sys:String>
     <sys:String x:Key="strError">Ошибка</sys:String>
     <sys:String x:Key="strLOGIN">ЛОГИН</sys:String>
@@ -64,7 +64,7 @@
 
     <!--Column-->
     <sys:String x:Key="strTITLE">НАЗВАНИЕ</sys:String>
-    <sys:String x:Key="strARTISTS">АРТИСТА</sys:String>
+    <sys:String x:Key="strARTISTS">АРТИСТ</sys:String>
     <sys:String x:Key="strALBUM">АЛЬБОМ</sys:String>
     <sys:String x:Key="strTRACK">ТРЕК</sys:String>
     <sys:String x:Key="strVIDEO">ВИДЕО</sys:String>
@@ -74,11 +74,11 @@
     <sys:String x:Key="strDURATION">ДЛИТЕЛЬНОСТЬ</sys:String>
     <sys:String x:Key="strTYPE">ТИП</sys:String>
     <sys:String x:Key="strDATE">ДАТА</sys:String>
-    <sys:String x:Key="strTIME">ВРЕМЯЫ</sys:String>
+    <sys:String x:Key="strTIME">ВРЕМЯ</sys:String>
     
     <!--Settings-->
     <sys:String x:Key="strPath">Папка загрузки:</sys:String>
-    <sys:String x:Key="strThreadNum">Номер:</sys:String>
+    <sys:String x:Key="strThreadNum">Количество одновременных загрузок:</sys:String>
     <sys:String x:Key="strSearchNum">Количество запросов:</sys:String>
     <sys:String x:Key="strAlbumFolderFormat">Формат названия папки альбома:</sys:String>
     <sys:String x:Key="strTrackFileFormat">Формат названия трека:</sys:String>
@@ -92,7 +92,7 @@
     <sys:String x:Key="strLimit1To3">лимит 1~3</sys:String>
     <sys:String x:Key="strLimit10To50">лимит 10~50</sys:String>
     <sys:String x:Key="strSearchArtistEP">Поиск артиста включая синглы/EP</sys:String>
-    <sys:String x:Key="strDownloadCover">Скачивать обложку</sys:String>
+    <sys:String x:Key="strDownloadCover">Скачать обложку</sys:String>
     <sys:String x:Key="strLimitFileName">Лимит названия файла 50~100</sys:String>
     <sys:String x:Key="strLimitAlbumFolder">Лимит названия папки альбома 50~100</sys:String>
     <sys:String x:Key="strConvertToM4a">Конвертировать mp4 в m4a</sys:String>
